crates/jolt_kotlin_fmt/tests/snapshots/recovery_snapshots__value_parameter_list.snap
---
source: crates/jolt_kotlin_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
fun demo(first: String, /* orphan */ , second: Int) {}

formatted:
fun demo(first: String, /* orphan */ , second: Int) {}

diagnostics:
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(39), end: TextSize(45) }) message=expected value parameter between commas
