crates/jolt_kotlin_fmt/tests/snapshots/recovery_snapshots__when_condition_list.snap
---
source: crates/jolt_kotlin_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
fun demo(x: Int) { when (x) { 1, /* orphan */ , 2 -> hit() } }

formatted:
fun demo(x: Int) {
  when (x) {
    1, /* orphan */  ,   2 -> hit()
  }
}

diagnostics:
code=kotlin.parse.unexpected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(48), end: TextSize(49) }) message=expected when condition between commas
