crates/jolt_kotlin_fmt/tests/snapshots/recovery_snapshots__when_missing_close.snap
---
source: crates/jolt_kotlin_fmt/tests/recovery_snapshots.rs
expression: snapshot
---
input:
fun demo(value: Int) { when (value) { 1 -> one()

formatted:
fun demo(value: Int) {
  when (value) {
    1 -> one()
  


diagnostics:
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(49), end: TextSize(49) }) message=expected '}' after when
code=kotlin.parse.expected_syntax severity=Error stage=Parser range=Some(TextRange { start: TextSize(49), end: TextSize(49) }) message=expected '}' after block
